tests/negative/typecheck/args_few.orng
// args_few.orng:7:29: error: struct takes 1 field, 0 values given
//     let x: My_Type = My_Type()
//                            ^
// 
fn main() -> Int {
    struct My_Type {b: Int}
    let x: My_Type = My_Type()
    4
}